# BO2

OptymalizacjaProjekt/: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
OptymalizacjaProjekt/src/backend/: main.py
OptymalizacjaProjekt/src/backend/core/: auth.py  constants.py  farm_simulation.py  worker.py
OptymalizacjaProjekt/src/backend/models/: __init__.py  models.py
